--- a/game.css
+++ b/game.css
@@ -1,50 +1,115 @@
+:root {
+    background-color: rgb(192, 202, 235);
+    font-size: 16px;
+}
+
+* {
+    box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace, sans-serif;
+    margin: 0;
+    padding: 0;
+    color: black;
+}
+
 .choice-container {
     display: flex;
+    margin-left: 50vh;
     margin-bottom: 8px;
-    width:100%;
+    width: 40%;
     font-size: 1.8rem;
     border: .1rem solid blue;
     background-color: purple;
     color: white;
 }
+
 .choice-prefix {
-    padding:24px 40px;
+    padding: 24px 40px;
     background-color: rgb(189, 50, 166);
-    color:white;
+    color: white;
 }
-.choice-text{
+
+.choice-text {
     padding-top: 4vh;
     padding: 1.5rem;
-    text-align:center;
-
+    text-align: center;
 }
-#question{
-    color:White;
-    font-weight:bolder;
-    background-color:purple;
-    width:40%;
+
+#question {
+    color: White;
+    font-weight: bolder;
+    background-color: purple;
+    width: 40%;
+    margin-left: 50vh;
+}
+
+.score-prefix {
+    color: purple;
+    font-size: 36px;
+    font-weight: bolder;
+}
+
+.score-actual {
+    color: green;
+    font-size: 32px;
+    font-weight: bold;
 }
 
 .correct {
-    background-color:rgb(43, 177, 43);
+    background-color: rgb(43, 177, 43);
 }
 
 .incorrect {
-    background-color:rgb(247, 51, 51);
+    background-color: rgb(247, 51, 51);
 }
 
 #score-display {
-    display:flex;
-    justify-content:space-between;
+    display: flex;
+    justify-content: space-between;
 }
-.score-prefix{
-text-align:center;
+
+.score-prefix {
+    text-align: center;
 }
-.score-actual{
-    font-size:24px;
-    margin-top:4vh;
-    text-align:center;
+
+.score-actual {
+    font-size: 24px;
+    margin-top: 4vh;
+    text-align: center;
 }
-.hide{
-    display:none;
+
+.hide {
+    display: none;
+}
+
+.timer {
+    font-size: 36px;
+    color: purple;
+    font-weight: bolder;
+}
+
+.high-score {
+    list-style-type: none;
+    font-size: 56px;
+    color: indigo;
+}
+
+#end {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(168, 80, 168);
+    border-color: purple;
+    border: .3rem solid purple;
+    color: rgb(10, 9, 10);
+    justify-content: center;
+    width: 40%;
+}
+
+.btn {
+    font-size: 24px;
+    font-weight: bolder;
+    color: white;
+    width: 320px;
+    border: 1.5px solid blue;
+    text-decoration: none;
+    background-color: purple;
 }
